Blackpurl/src/objects/Stock_Count__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stock Count</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Stock Count Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>